<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/av"
    android:layout_width="fill_parent"
    android:layout_height="200dip"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/av_iv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:src="@drawable/logo9" />

    <TextView
        android:id="@+id/av_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/av_iv1"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/about1"
        android:textColor="#8E6345"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/av_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/av_tv1"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textColor="#8E6345"
        android:text="@string/about2"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/av_tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/av_tv2"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/about3"
        android:textColor="#8E6345"
        android:textSize="17sp" />

</RelativeLayout>